--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,20 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/src/Workshop/[Ll]ibrary/
-/src/Workshop/[Tt]emp/
-/src/Workshop/[Oo]bj/
-/src/Workshop/[Bb]uild/
-/src/Workshop/[Bb]uilds/
-/src/Workshop/[Ll]ogs/
-/src/Workshop/[Mm]emoryCaptures/
+/src/workshop/[Ll]ibrary/
+/src/workshop/[Tt]emp/
+/src/workshop/[Oo]bj/
+/src/workshop/[Bb]uild/
+/src/workshop/[Bb]uilds/
+/src/workshop/[Ll]ogs/
+/src/workshop/[Mm]emoryCaptures/
+/src/savepoints/[Ll]ibrary/
+/src/savepoints/[Tt]emp/
+/src/savepoints/[Oo]bj/
+/src/savepoints/[Bb]uild/
+/src/savepoints/[Bb]uilds/
+/src/savepoints/[Ll]ogs/
+/src/savepoints/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
