--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/src/workshop/[Ll]ibrary/
-/src/workshop/[Tt]emp/
-/src/workshop/[Oo]bj/
-/src/workshop/[Bb]uild/
-/src/workshop/[Bb]uilds/
-/src/workshop/[Ll]ogs/
-/src/workshop/[Mm]emoryCaptures/
-/src/savepoints/[Ll]ibrary/
-/src/savepoints/[Tt]emp/
-/src/savepoints/[Oo]bj/
-/src/savepoints/[Bb]uild/
-/src/savepoints/[Bb]uilds/
-/src/savepoints/[Ll]ogs/
-/src/savepoints/[Mm]emoryCaptures/
+/UnityGame/[Ll]ibrary/
+/UnityGame/[Tt]emp/
+/UnityGame/[Oo]bj/
+/UnityGame/[Bb]uild/
+/UnityGame/[Bb]uilds/
+/UnityGame/[Ll]ogs/
+/UnityGame/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
